# QRATUM

./: .coverage  .gitignore  CATEGORY_DEFINITION.md  CATEGORY_VISUAL_SUMMARY.md  CDP_VALIDATION_REPORT.md  CHANGELOG.md  COMPLIANCE_ASSESSMENT_INDEX.md  Dockerfile.production  Dockerfile.sandbox-platform  Dockerfile.sandbox-qradle  GOODYEAR_PILOT_EXECUTION_SUMMARY.md  GOODYEAR_PILOT_USAGE.md  IMPLEMENTATION_SUMMARY.md  LIGHTNING_STRIKE_NARRATIVE.md  MISSION_DATA_INTEGRATION_SUMMARY.md  Makefile  PHASE4_SUMMARY.md  PR_COMMENT_SUMMARY.md  QUICKSTART_GOODYEAR.md  README.md  README_PREVIEW.md  RECURSIVE_ASI_IMPLEMENTATION_SUMMARY.md  RECURSIVE_ASI_PROGRAM_README.md  TASK_COMPLETION_REPORT.md  TIRE_SIMULATION_SUMMARY.md  ULTRASSSP_PR_SUMMARY.md  demo_audit_trail.json  docker-compose.production.yml  extractor_demo.ipynb  generate_quasim_jsons.py  goodyear_sustainable_2030_pilot.py  issues-report.md  live_emulation_for_ci_validation.py  pyproject.toml  qratum_fullstack_server.py  run_asi_tests.py  run_bm001_tier0.py  run_discovery_engine.py  run_goodyear_pilot.sh  run_goodyear_quantum_pilot.py  (+6 more)
Aethernet/: Cargo.toml  IMPLEMENTATION_SUMMARY.md  LEGAL_ANALYSIS_REPORT.json  README.md  run_juris_analysis.py  run_juris_legal_analysis.py
QuASIM/: Dockerfile.cuda
adapters/: base.py
analysis/: fortune500_quasim_integration.py  fortune500_report_generator.py  fortune500_visualizations.py  qvr_quasim_valuation.py
qcore/: Cargo.toml  README.md  authority.py  hamiltonian.py  issuer.py  policy.py  resolver.py
qcore/src/: error.rs  lib.rs  objects.rs  pack.rs  refs.rs  store.rs
(+660 files in other folders)
