[package]
name = "qcore"
version = "0.1.0"
edition = "2021"
authors = ["QuASIM Team"]
description = "Q-Core: Rust-based Git Object Store for QuASIM"
license = "Apache-2.0"

[dependencies]
sha1 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
hex = "0.4"
flate2 = "1.0"
tiny_http = "0.12"

[dev-dependencies]
tempfile = "3.8"

[[bin]]
name = "qcore-cli"
path = "src/bin/cli.rs"

[[bin]]
name = "qcore-server"
path = "src/bin/server.rs"
